kubernetes/apps/monitoring/unpoller/app/service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: unpoller
  namespace: monitoring
  labels:
    app.kubernetes.io/name: unpoller
    app.kubernetes.io/instance: unpoller
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9130
      targetPort: http-metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: unpoller
    app.kubernetes.io/instance: unpoller
